# vela-dpad

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  FEATURES.md  PRIVACY.md  README.md  ROADMAP.md  SECURITY.md  SPEC.md  build.gradle.kts  calibration.json  calibration.json.sig  settings.gradle.kts
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: address-overlays.yml  building-overlays.yml  ci.yml  flock-cameras.yml  poi-packs.yml  promote-stable.yml  (+3 more)
app/: build.gradle.kts  proguard-rules-debug.pro  proguard-rules.pro
app/src/main/cpp/: CMakeLists.txt  velamem.cpp
buildSrc/: build.gradle.kts
core/: build.gradle.kts  consumer-rules.pro
deadcode_test_suite/: audit_deadcode.sh
docs/: ANDROID-AUTO.md  CONTRIBUTING.md  FEATURES.md  PRIVACY.md  ROADMAP.md  SPEC.md  dpad.md  softkeys.md
dpad_test_suite/: README.md  audit_dialogs.sh  audit_dynamic.sh  audit_static.sh  lib.sh  setup.sh  teardown.sh
ghprobe/: build.gradle.kts
gradle/: libs.versions.toml
scripts/: build-address-region.sh  build-flock-cameras.py  build-overlay-region.sh  build-poi-region.sh  build-routing-region.sh  merge-address-manifest.sh  merge-overlay-manifest.sh  merge-poi-manifest.sh  merge-routing-manifest.sh  poipack_build.py  poipack_delta.py  sign-calibration.sh
smallscreen_test_suite/: README.md  audit_dialogs.sh  audit_smallscreen.sh  run_all.sh
soft-keys/: README.md
tools/: address-regions.json  check-translations.py  overlay-regions.json  translations.lock.json
yapchik/: build.gradle.kts
(+325 files in other folders)
